Fix T47329: Compositing fails to render unless each included scene was rendered since opening